<?php


namespace App\Entites;


class Film
{

    public function ajouterCommentaire(Commentaire $commentaire) {

    }
}

